Removed old control limit system

--- a/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTIndex.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/AASPOTIndex.cshtml
@@ -21,20 +21,14 @@
             <a href="~/Alert/Alert/AASPOTAlertList?ActiveAlertOnly=true&h_alert-triggerCount-GreaterThan=1&h_alert-Rows=15" class="btn btn-warning btn-sm">AASPOTalerts Openalerts&raquo;</a>AASPOT Alerts OPEN state  EN meer dan 1 keer getriggerd
         </p>
 
-        <h5>Control limits</h5>
+        <h3>Control Limits </h3>
+        <p>
+            <a href="~/Alert/L_controlLimits/Index" class="btn btn-primary btn-sm">controlLimits &raquo;</a>view control limits
+        </p>
+        <p>
+            <a href="~/Alert/L_variants/Index" class="btn btn-primary btn-sm">variants &raquo;</a>view variants
+        </p>
 
-        <p>
-            <a href="~/Alert/GunCylinderefernces/Index" class="btn btn-primary btn-sm">GunCylinderefernces (control limits) &raquo;</a>
-        </p>
-        <p>
-            <a href="~/Alert/GunCylinderefernces/Index?maxdelta=1000" class="btn btn-warning btn-sm">GunCylinderefernces &raquo;</a>Detla > 1000ms (control limits that might be wrong)
-        </p>
-        <p>
-            <a href="~/Alert/SBCUrefernces/Index" class="btn btn-primary btn-sm">SBCUrefernces (control limits) &raquo;</a>
-        </p>
-        <p>
-            <a href="~/Alert/SBCUrefernces/Index?maxdelta=10" class="btn btn-warning btn-sm">SBCUrefernces &raquo;</a>Detla > 10mm (control limits that might be wrong)
-        </p>
 
     </div>
 </div>
