--- a/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/Alert/Index.cshtml
@@ -24,7 +24,7 @@
             <a href="~/Alert/Alert/AASPOTIndex" class="btn btn-primary btn-sm">AASPOTIndex &raquo;</a>Alert systeem aangepast voor AASPOT users
         </p>
 
-        <h3>Dit is nog in test en ook nog niet echt gekoppeld aan de alerts! </h3>
+        <h3>Control Limits </h3>
         <p>
             <a href="~/Alert/L_controlLimits/Index" class="btn btn-primary btn-sm">controlLimits &raquo;</a>view control limits
         </p>
