bugfix in pannel colaps only first one

--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/GetControlChart.cshtml
@@ -9,5 +9,5 @@
     chartname = "testchart",
     alarmobject = "35200R01_gun1",
     c_trigger_id = 4
-
+    //daterange should be added it is no longer set in the javascript
 })
