--- a/EqUiWebUi/Content/CustomStyleTweeks.css
+++ b/EqUiWebUi/Content/CustomStyleTweeks.css
@@ -41,7 +41,10 @@
     background-color: #f2af13;
 }
 
-.TableLogtypeTIMELINE {
+.TableLogtypeSTO {
+    background-color: #f2af13
+}
+ .TableLogtypeTIMELINE {
     background-color: #16dd76;
 }
 
