--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
@@ -10,12 +10,49 @@
     @Html.ActionLink("Create New", "Create")
 </p>
 
-@Html.Action("_list")
+<div id="l_controlLimits" class="mvc-grid"></div>
+
 
 @section scripts{
-    <script>
+<script>
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
-    </script>
+
+        $("#l_controlLimits").mvcgrid({
+                sourceUrl: '@Url.Action("_List")',
+                requestType: 'get',
+                reload: true,
+                rowClicked: function (row, data, e) {
+                //if row already has this clase close the modal
+                if ($(row).hasClass("bg-info")) {
+                    $("#placeholder1").remove();
+                    $(row).removeClass("bg-info");
+                    return;
+                }
+                //clear selected rows for this table
+                $('tr').removeClass('bg-info'); //THIS IS WRONG
+                $(row).addClass("bg-info");
+                $("#placeholder1").remove(); //clear placeholder is exists
+                //add new placeholder afhter selected row
+                $(row).after('<tr id="placeholder1"><td colspan="10000"><div class=""><div class="" id ="placeholderPartial1"></div></div></td></tr>');
+                //load partial into div
+                $("#placeholderPartial1").load('@Url.Action("_ControlChart","Alert")', {
+                    //need to build a dummy hAlert
+
+                });
+                //listen toclick events
+                //
+                },
+                reloadStarted: function () {
+
+                },
+                reloadEnded: function () {
+
+                },
+                reloadFailed: function (result) {
+                    $('#dummyLogClassResultGrid').html("Error while loading!!!");
+                }
+            });
+</script>
 }
