Fixed all the shit I removed by accident

--- a/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/ControlChart/_GetControlChart.cshtml
@@ -123,7 +123,7 @@
             {
 
                 // Boolean - Whether the line is curved between points
-                bezierCurve: true,
+                bezierCurve: false, //looks bad with control limtit changes
                 // Number - Tension of the bezier curve between points
                 bezierCurveTension: 0.2,
                 showTooltips: true,
