--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Index.cshtml
@@ -37,10 +37,7 @@
                 //add new placeholder afhter selected row
                 $(row).after('<tr id="placeholder1"><td colspan="10000"><div class=""><div class="" id ="placeholderPartial1"></div></div></td></tr>');
                 //load partial into div
-                $("#placeholderPartial1").load('@Url.Action("_ControlChart","Alert")', {
-                    //need to build a dummy hAlert
-
-                });
+                $("#placeholderPartial1").load('@Url.Action("_ControlChart","Alert")?l_controllimit_id=' + data.id );
                 //listen toclick events
                 //
                 },
