--- a/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/L_controlLimits/Edit.cshtml
@@ -117,7 +117,7 @@ else if (Model.l_variants_id.HasValue)
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" formaction='@Url.Action("Edit",new {returnURL = ViewBag.returnURL })' />
+                <input type="submit" value="Save" class="btn btn-default" formaction='@Url.Action("Edit",new {returnURL = ViewBag.returnURL, closeOnSave =   ViewBag.closeOnSave})' />
             </div>
         </div>
     </div>
