--- a/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
+++ b/EqUiWebUi/Areas/Alert/Views/c_triggers/Edit.cshtml
@@ -353,12 +353,13 @@ else
         //for check statement
         //on Runstatement show the user the result from the alert sql statement
         $('#Runstatement').click(function () {
-                var urlDynamicWebgrid = '@Url.Action("_dynamicWebgridRunQueryAgainstDB", "Dynamic", new { area = "" })?qry=' + encodeURIComponent(sqlStatementCodeMirror.getValue()) +
-                    '&db=' + $('#c_datasource_id').val();
                 //launch modal
                 $('#MyModal').removeData('bs.modal');
                 $('#MyModal').modal({ show: true });
-                $('#MyModal').load(urlDynamicWebgrid, function (result) { });
+                $('#MyModal').load('@Url.Action("_dynamicWebgridRunQueryAgainstDB", "Dynamic", new { area = "" })'
+                    , { qry: sqlStatementCodeMirror.getValue(), db: $('#c_datasource_id').val() }
+                    , function (result) { }
+                );
         });
         //on checkstatement show the user if all mandatory columns are there
         var mandatorytriggerColumns = new Array();
@@ -366,26 +367,26 @@ else
         mandatorytriggerColumns[1] = "item2";
         mandatorytriggerColumns[2] = "item3";
         $('#checkstatement').click(function () {
-            var urlDynamicWebgrid = '@Url.Action("_CheckStatement", "Dynamic", new { area = "" })?qry=' + encodeURIComponent(sqlStatementCodeMirror.getValue()) +
-                '&db=' + $('#c_datasource_id').val() + '&mandatoryColumns=' + mandatorytriggerColumns; //this is not working !!!!!!
             //launch modal
             $('#MyModal').removeData('bs.modal');
             $('#MyModal').modal({ show: true });
-            $('#MyModal').load(urlDynamicWebgrid, function (result) { });
+            $('#MyModal').load('@Url.Action("_CheckStatement", "Dynamic", new { area = "" })'
+                , { qry: sqlStatementCodeMirror.getValue(), db: $('#c_datasource_id').val() }
+                , function (result) { }
+            );
         });
 
 
          //on Runstatement show the user the result from the alert sql statement
         $('#checkcontrollimitSqlStatement').click(function () {
-                var urlDynamicWebgrid = '@Url.Action("_dynamicWebgridRunQueryAgainstDB", "Dynamic", new { area = "" })?qry=' + encodeURIComponent(controllimitSqlStatementCodeMirror.getValue()) +
-                    '&db=' + $('#c_datasource_id').val();
                 //launch modal
                 $('#MyModal').removeData('bs.modal');
                 $('#MyModal').modal({ show: true });
-                $('#MyModal').load(urlDynamicWebgrid, function (result) { });
+                $('#MyModal').load('@Url.Action("_dynamicWebgridRunQueryAgainstDB", "Dynamic", new { area = "" })'
+                    , { qry: controllimitSqlStatementCodeMirror.getValue(), db: $('#c_datasource_id').val() }
+                    , function (result) { }
+                );
         });
-
-
 
        //clear on close
         //on modal close
