--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
     <!--footer-->
     <hr />
     <footer id="footer">
-        <p>&copy; @DateTime.Now.Year - VCG GA SDEBEUL Application</p>
+        <p>VCG GA SDEBEUL Application</p>
     </footer>
     @*when navbar is hidden this is visble*@
     <div class="pull-right">
