--- a/EqUiWebUi/Areas/user_management/Views/users/Edit.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/Edit.cshtml
@@ -61,7 +61,7 @@
             @Html.LabelFor(model => model.Culture, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 <div class="checkbox">
-                    @Html.EditorFor(model => model.Culture, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.DropDownList("Culture", (SelectList)ViewBag.cultrueSelectlist, htmlAttributes: new { @class = "form-control" })
                     @Html.ValidationMessageFor(model => model.Culture, "", new { @class = "text-danger" })
                 </div>
             </div>
