--- a/EqUiWebUi/Areas/user_management/Views/users/Index.cshtml
+++ b/EqUiWebUi/Areas/user_management/Views/users/Index.cshtml
@@ -15,6 +15,7 @@
     columns.Add(c => c.username).Titled("Username").InitialSort(GridSortOrder.Asc);
     columns.Add(c => c.LocationRoot).Titled("LocationRoot");
     columns.Add(c => c.AssetRoot).Titled("AssetRoot");
+    columns.Add(c => c.Culture).Titled("Culture");
     columns.Add(c => c.Locked).Titled("Locked").Css("d-none d-lg-table-cell");
     columns.Add(c => c.Blocked).Titled("Blocked").Css("d-none d-lg-table-cell");
     columns.Add(c => c.id)
