updated gadata models and bugfix for ocacle connections

--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -10,13 +10,13 @@
 <div class="card">
     <div class="card-header bg-dark">
         <h5 class="card-title text-white">
-            @EqUiWebUi.Resources.defaultArea.SupervisionHeader
+            @EqUiWebUi.defaultArea.SupervisionHeader
             <span class="clickable float-right"><i class="fas fa-chevron-circle-up fa-1"></i></span>
         </h5>
     </div>
     <div class="card-body">
         <p>
-            <a href="~/Gadata/Table/PloegRapportWebgrid" class="btn btn-primary btn-sm">@EqUiWebUi.Resources.defaultArea.ShiftReport &raquo;</a>
+            <a href="~/Gadata/Table/PloegRapportWebgrid" class="btn btn-primary btn-sm">@EqUiWebUi.defaultArea.ShiftReport &raquo;</a>
             Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen
         </p>
         <p>
