--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -20,7 +20,7 @@
             Bevat storingen groter dan 20 minuten of die meer dan 3 keer zijn voorgevallen
         </p>
         <p>
-            <a href="~/Gadata/Table/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie Robots &raquo;</a>
+            <a href="~/Gadata/Table/SupervisieWebgrid" class="btn btn-primary btn-sm">Supervisie&raquo;</a>
             Bevat alles nu in storing en storingen die langer dan 1 minut hebben geduurd.
         </p>
 
