better logging in hangfire

--- a/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
+++ b/EqUiWebUi/App_Code/MyHtmlHelpers.cshtml
@@ -4,7 +4,7 @@
         <div class="col-md-12">
             <div class="update-nag" onclick="location.href='@url'">
                 <div class="update-split @iconClasses">
-                    <i class="far @icon"></i>
+                    <i class="far @icon fa-2x"></i>
                 </div>
                 <div class="update-text">
                     <div class="title">@linkText</div>
