--- a/EqUiWebUi/Views/Home/Index.cshtml
+++ b/EqUiWebUi/Views/Home/Index.cshtml
@@ -35,7 +35,7 @@
         </h5>
     </div>
     <div class="card-body">
-        @MyHtmlHelpers.EquiLink("/Tiplife/NgacElectrode/index", "far fa-object-group", "Electrode", helperText: "Alles in verband met de Electrodes (greenfield)")
+        @MyHtmlHelpers.EquiLink("/Tiplife/NgacElectrode/index", "fas fa-industry", "Electrode", helperText: "Alles in verband met de Electrodes (greenfield)")
         @MyHtmlHelpers.EquiLink("http://gensvw2107.gen.volvocars.net/Greenfield/#/ctgreenfield", "fas fa-stopwatch", "cmaCTapp", helperText: "Tool van IE om Cycle times te bekijken")
         @MyHtmlHelpers.EquiLink("/PlcSupervisie/Screenshot/Carousel", "far fa-object-group", "Supervisie (UB12)", helperText: "Plc Supervisie voor UB12 (mobile friendly)")
 
